--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,6 +168,7 @@
         <label><input type="checkbox" id="toggle-mm" checked> MM outline</label>
         <label><input type="checkbox" id="toggle-roads" checked> Roads</label>
         <label><input type="checkbox" id="toggle-projects" checked> Projects</label>
+        <label style="margin-left:8px"><input type="checkbox" id="toggle-project-heat" />Project density</label>
       </div>
     </div>
 
